# geospatial-anomaly-detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
docs/: architecture.md
notebooks/: demo.ipynb
src/data_generation/: __init__.py  anomalies.py  generator.py
src/evaluation/: __init__.py  metrics.py
src/feature_engineering/: __init__.py  features.py
src/models/: __init__.py  autoencoder.py  isolation_forest.py  lstm.py
src/visualization/: __init__.py  maps.py  plots.py
tests/: test_data_generation.py  test_feature_engineering.py  test_models.py
